--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AgentLaw</title>
+  <link rel="stylesheet" href="/src/index.css"> <!-- Include CSS -->
 </head>
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/index.js"></script> <!-- Load React App -->
 </body>
 </html>
