--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AgentLaw</title>
-  <link rel="stylesheet" href="/src/index.css"> <!-- Include CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IntrinsAI Legal Chatbot</title>
+  <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/index.js"></script> <!-- Load React App -->
+  <script src="/static/js/index.js"></script>
 </body>
+</html>
